changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix monsters not using wands/staffs/rods.
Andreas Kirschbaum 2009-06-09

Remove support for obsolete attributes can_use_rod, can_use_wand, and
can_use_horn. These attributes have been read/written from/to map files but
not used for anything.
Andreas Kirschbaum 2009-06-09

include/shared: Add as a non-external directory.
include/shared/newclient.h: Added client/trunk/common/shared/newclient.h
  revision 11674 to transfer control of newclient.h from client area to 
  server area.
include/shared/README: Add a file with a brief note stating that the client
  references the files in this directory using an SVN external property.
Kevin Bulgrien 2009-05-09

include: After advice of Ragnor against svn:externals without -r, deleted the
  svn:externals pointing to client/trunk/common/shared, after also coming to
  the conclusion that this needs to be controlled in server vs. client so that
  any client software base that wants to use this file can specify the version
  of the file they want instead of the server having to pick one from
  somewhere else.
Kevin Bulgrien 2009-05-09

include: Added svn:externals pointing to client/trunk/common/shared
include/includes.h
include/Makefile.am
include/newclient.h: Removed. Duplicate file.
socket/item.c
socket/image.c
socket/request.c
socket/lowlevel.c
server/c_range.c
server/shop.c
server/player.c: changed references of newclient.h to shared/newclient.h.
Kevin Bulgrien 2009-05-09

server/c_object.c: Fix crash when picking up some flying objects.
Andreas Kirschbaum 2009-04-20
