@@ -899,7 +899,7 @@ int command_create(object *op, char *params) {
         }
     } /* if cp */
 
-    if ((at->clone.type == ROD || at->clone.type == WAND || at->clone.type == SCROLL || at->clone.type == HORN || at->clone.type == SPELLBOOK)
+    if ((at->clone.type == ROD || at->clone.type == WAND || at->clone.type == SCROLL || at->clone.type == SPELLBOOK)
     && !at_spell) {
         draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_ERROR,
                              "Unable to find spell %s for object that needs it, or it is of wrong type",
